--- a/package.json
+++ b/package.json
@@ -17,20 +17,14 @@
     "node": ">=8.10.0"
   },
   "devDependencies": {
-    "autoprefixer": "~9.4.7",
-    "eslint": "~5.13.0",
-    "eslint-plugin-angular": "~4.0.0",
+    "autoprefixer": "~9.5.1",
+    "eslint": "~5.16.0",
+    "eslint-plugin-angular": "~4.0.1",
     "eslint-plugin-lodash": "~5.1.0",
     "eslint-plugin-protractor": "~1.41.1",
-    "grunt": "~1.0.1",
-    "grunt-cli": "~1.3.2",
-    "grunt-contrib-clean": "~1.1.0",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-coveralls": "~1.0.1",
-    "grunt-istanbul": "~0.7.2",
-    "grunt-protractor-coverage": "~0.2.17",
-    "postcss-cli": "~6.1.1",
-    "protractor": "~5.4.2"
+    "postcss-cli": "~6.1.2",
+    "protractor": "~5.4.2",
+    "webdriver-manager": "~12.1.4"
   },
   "scripts": {
     "postinstall": "cd vendors && npm install",
